# Linguo

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  config-log.yml  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 0b32a17d1242_init_tables_users_and_tokens.py  598609c6553d_decks_cards_models.py  73b312d3244e_add_feedbacks_table.py  858b066638c6_change_users_and_profiles_tables.py  a3de1a9b7bef_create_profile_model.py  a7c93a7ef217_create_card_reviews_and_review_logs_.py  f59e5745d9ed_create_files_table.py
commands/: start-dev.sh  start-prod.sh
docs/: card-service.md  deck-service.md  openapi.json
nginx/dev/: default.conf
nginx/dev/init/: init.conf
nginx/prod/: default.conf
src/: main.py
tests/: conftest.py
tests/auth_service/: helpers.py  test_build_access_token.py  test_login.py  test_logout.py  test_refresh.py  test_register.py  test_reset_password.py  test_reset_password_router.py
tests/card_service/: helpers.py  test_change_card_deck.py  test_create_card.py  test_delete_card.py  test_get_card_details.py  test_get_cards_by_deck.py  test_update_card.py
tests/feedback_service/: test_create_feedback.py
tests/fixtures/: auth_service.py  card_service.py  feedback_service.py  token_service.py  user_service.py
tests/integrations/: conftest.py
tests/quiz_service/: test_true_false_input_builder.py
tests/token_service/: helpers.py  test_create_token.py  test_deactivate_token.py  test_rotate.py
tests/user_service/: helpers.py  test_create_user.py  test_get_by_email.py
(+139 files in other folders)
