[project]
name = "linguo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.5.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.129.0",
    "minio>=7.2.20",
    "fsrs>=6.3.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart==0.0.20",
    "sqlalchemy>=2.0.46",
    "testcontainers[postgres]>=4.14.1",
    "gunicorn>=25.3.0",
    "httpx>=0.28.1",
    "tenacity>=9.1.4",
]

[dependency-groups]
lint = [
    "mypy>=1.19.1",
    "ruff>=0.15.1",
]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"


[tool.mypy]
python_version = 3.12
mypy_path=["src"]

[[tool.mypy.overrides]]
module = "testcontainers.*"
ignore_missing_imports = true
